test/tests/operators/from_microsoft_graph/error_malformed_delta_link.txt
error: invalid OData `@odata.deltaLink` URL: mismatch
 --> tests/operators/from_microsoft_graph/error_malformed_delta_link.tql:9:1
  |
9 | from_microsoft_graph "users",
  | ^^^^^^^^^^^^^^^^^^^^ 
  |
